# cookiecutter-templates

./: README.md
python/: cookiecutter.json
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: pyproject.toml
