[project]
name = "{{ cookiecutter.project_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.python_version }}"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# --- Configuração do UV e Dependências de Dev ---
[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "taskipy>=1.12",
    "ruff>=0.3",
]

# --- Configuração do Taskipy ---
[tool.taskipy.tasks]
run = "python src/{{cookiecutter.project_slug}}/main.py"
test = "pytest -v"
lint = "ruff check ."
format = "ruff format ."
check = "task lint && task format && task test"

# --- Configuração do Pytest ---
[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

# --- Configuração do Ruff (Linter/Formatter) ---
[tool.ruff]
line-length = 88
target-version = "py313"
fix = true
show-fixes = true
indent-width = 4
exclude = ["venv", ".venv", "env", ".env", "node_modules", "__pycache__"]

[tool.ruff.lint]
select = [
    "ASYNC",
    "A",
    "ANN",
    "B",
    "BLE",
    "C4",
    "C90",
    "COM",
    "E",
    "EM",
    "ERA",
    "EXE",
    "F",
    "FBT",
    "FIX",
    "I",
    "ICN",
    "ISC",
    "Q",
    "RET",
    "RSE",
    "S",
    "SIM",
    "SLF",
    "T10",
    "T20",
    "TC",
    "TD",
    "TRY",
    "UP",
    "W",
    "YTT",
    "RUF",
    "N",
]
ignore = ["T201", "COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN201", "S101"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug }}"]